k3s/services/heimdall/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress
  namespace: heimdall
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - heimdall.homelab.kevin.lutzer.ca
    secretName: heimdall-kevinlutzer-ca-tls
  rules:
  - host: heimdall.homelab.kevin.lutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: heimdall
              port:
                number: 80
